# TuneConsole

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  macos.yml  release.yml
extension/: README.md  background.js  content.js  manifest.json  nowplaying_main.js  observer_main.js  suppress_unload_main.js
packaging/: README.md
packaging/flathub/: README.md  com.tuneconsole.TuneConsole.yaml  python3-requirements.json
packaging/flatpak/: com.tuneconsole.TuneConsole.desktop  com.tuneconsole.TuneConsole.metainfo.xml  com.tuneconsole.TuneConsole.yaml  generate-pip-sources.sh  io._4rc.YtPlaylist.desktop  io._4rc.YtPlaylist.metainfo.xml  io._4rc.YtPlaylist.yaml  tuneconsole.flatpakrepo  yt-playlist-launch
packaging/macos/: build.sh  entry.py  make-icns.sh  yt-playlist.spec
scripts/: build-extension.sh  spike_receiver.py  sync-assets.mjs
src/yt_playlist/: __main__.py  action_kinds.py  analysis.py  discogs.py  discover.py  egress.py  embed.py  enrich_queue.py  eval_recs.py  executor.py  genre_map.py  identities.py  lastfm.py  liked_music.py  matching.py  musicbrainz.py  net.py  ops.py  paths.py  rec_params.py  rec_worker.py  recommend.py  retry.py  runtime.py  setup.py  store.py  sync.py  thumbnails.py  transient.py
tests/: conftest.py  test_acousticbrainz.py  test_album_enrich.py  test_album_web.py  test_alternate_versions.py  test_analysis.py  test_arc_energy.py  test_auth_banner_persist.py  test_auto_playlists.py  test_autotune.py  test_autotune_metric.py  test_autotune_run.py  test_ban_manager.py  test_best_holdout.py  test_blend_spaces.py  test_breadth.py  test_breadth_steer.py  test_breadth_weighted.py  test_building_state.py  test_card_refresh.py  test_catalog_rank_base.py  test_charts_ticker_web.py  test_cleanup_excludes_generated.py  test_cleanup_ignore.py  test_cluster_album_cap.py  test_cluster_expand.py  test_cluster_genre_filter.py  test_cluster_recipe.py  test_cluster_search.py  test_clusters_route.py  test_cold_candidates_nolimit.py  test_collection_web.py  test_config.py  test_conflicts_web.py  test_connection_explain.py  test_content_projection.py  test_cooc_weighting.py  test_corpus_adjacency.py  test_dashboard_surfaces.py  test_decay_kernel.py  (+150 more)
tests/browser/: conftest.py  test_artist_album_browser.py  test_cleanup_browser.py  test_discover_browser.py  test_genres_browser.py  test_home_browser.py  test_merge_browser.py  test_move_browser.py  test_playlist_browser.py  test_playlists_browser.py  test_setup_browser.py
tests/core/: test_bridge.py  test_bridge_session.py  test_build_client_bridge.py  test_runtime_bridge.py
tests/enrich/: test_enrich_discovered.py
tests/providers/: test_waterfall_sink.py  test_wikipedia.py
tests/rec/: test_artist_model.py  test_behavior_taste.py  test_cluster_blend.py  test_cluster_new_music.py  test_cluster_param.py  test_cold_candidates.py  test_content_embed.py  test_content_rebuild.py  test_content_taste.py  test_discovery_cleanup.py  test_discovery_facet.py  test_discovery_gc_param.py  test_discovery_overlay.py  test_discovery_pool.py  test_eval_cold.py  test_fresh_proposal.py  test_gc_discovery.py  test_insight_detectors.py  test_into_recently.py  test_like_repair.py  test_populate_discovered_tracks.py  test_populate_radio_tracks.py  test_scoring_cold_tilt.py  test_transient_audio.py  test_trend_math.py  test_trend_rollups_build.py
tests/repos/: test_actions_repo.py  test_basket_provenance.py  test_catchall.py  test_charts_dist.py  test_charts_repo.py  test_collection_repo.py  test_content_vectors.py  test_dead_playlists_excludes_generated.py  test_discovered_enrich.py  test_discovered_genre.py  test_discovery_bounds.py  test_discovery_gc.py  test_discovery_tracking.py  test_discovery_view.py  test_event_timestamps.py  test_generated_provenance.py  test_genres_repo.py  test_history_plays.py  test_history_repo.py  test_identities_repo.py  test_lane_impressions.py  test_mode_events.py  test_mode_ranker.py  test_modes_repo.py  test_mood_prune.py  test_overlaps_repo.py  test_play_events.py  test_player_events.py  test_playlists_repo.py  test_radio_provenance.py  test_rec_query_recency.py  test_rec_repo.py  test_rediscover_repo.py  test_settings_repo.py  test_skip_reads.py  test_takeout_repo.py  (+5 more)
(+218 files in other folders)
