[project]
name = "yt-playlist"
version = "0.1.0"
description = "Local web tool to dedupe, merge, and prune YouTube Music playlists across identities"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi>=1.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.6",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
yt-playlist = "yt_playlist.__main__:main"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "watchfiles>=0.21", "pytest-playwright>=0.5"]  # watchfiles powers `yt-playlist --reload`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_playlist"]

[tool.pytest.ini_options]
addopts = "-q -m 'not browser'"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["browser: live-browser tests via Playwright (run with -m browser)"]
