[project]
name = "yt-playlist"
version = "0.1.1"
description = "Local web tool to dedupe, merge, and prune YouTube Music playlists across identities"
requires-python = ">=3.10"
dependencies = [
    # Major-capped: the egress guard (yt_playlist.egress) patches the requests/urllib
    # contract, not ytmusicapi internals, so the security guarantee survives upgrades —
    # but we cap the major for reproducibility and to review breaking changes deliberately.
    "ytmusicapi>=1.12,<2",
    "fastapi>=0.110",
    # [standard] pulls in a WebSocket implementation (websockets), which the extension bridge
    # endpoint (/bridge/ws) requires; plain uvicorn returns 404 on the WS upgrade without it.
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.6",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.26",
]

[project.scripts]
yt-playlist = "yt_playlist.__main__:main"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "watchfiles>=0.21", "pytest-playwright>=0.5"]  # watchfiles powers `yt-playlist --reload`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_playlist"]

[tool.pytest.ini_options]
addopts = "-q -m 'not browser'"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["browser: live-browser tests via Playwright (run with -m browser)"]
